<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.login.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_24sdp"
            android:adjustViewBounds="true"

            android:cropToPadding="true"
            android:src="@drawable/ic_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="VectorDrawableCompat" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/welcome"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/sign"
            android:textColor="@color/gray"
            android:textSize="@dimen/_8sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <EditText
            android:id="@+id/emailLoginEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginLeft="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_18sdp"
            android:layout_marginEnd="@dimen/_12sdp"
            android:layout_marginRight="@dimen/_12sdp"
            android:fontFamily="@font/poppins_regular"
            android:background="@drawable/edit_text_shape"
            android:drawableStart="@drawable/ic_mail"
            android:drawablePadding="12dp"
            android:hint="@string/E_Mail"
            android:inputType="textEmailAddress"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            android:drawableLeft="@drawable/ic_mail" />

        <EditText
            android:id="@+id/passwordLoginEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginLeft="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_6sdp"
            android:layout_marginEnd="@dimen/_12sdp"
            android:layout_marginRight="@dimen/_12sdp"
            android:fontFamily="@font/poppins_regular"
            android:background="@drawable/edit_text_shape"
            android:drawableStart="@drawable/ic_password"
            android:drawablePadding="12dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailLoginEditText"
            android:drawableLeft="@drawable/ic_password" />

        <Button
            android:id="@+id/signInLoginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginLeft="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_18sdp"
            android:layout_marginRight="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_12sdp"
            android:fontFamily="@font/poppins_bold"
            android:padding="16dp"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:background="@drawable/button_shabe"
            app:backgroundTint="@color/primaryBlue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordLoginEditText" />


        <View
            android:id="@+id/view1"
            android:layout_width="0dp"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/gray"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginLeft="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_12sdp"
            android:layout_marginRight="@dimen/_12sdp"
            app:layout_constraintBottom_toBottomOf="@+id/textView3"
            app:layout_constraintEnd_toStartOf="@+id/textView3"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView3" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:fontFamily="@font/poppins_bold"
            android:gravity="center_horizontal"
            android:text="@string/or"
            android:textAlignment="center"
            android:textColor="@color/gray"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/view2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/view1"
            app:layout_constraintTop_toBottomOf="@+id/signInLoginButton" />

        <View
            android:id="@+id/view2"
            android:layout_width="0dp"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/gray"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginLeft="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_12sdp"
            android:layout_marginRight="@dimen/_12sdp"
            app:layout_constraintBottom_toBottomOf="@+id/textView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toTopOf="@+id/textView3" />

        <Button
            android:id="@+id/googleSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_18sdp"
            android:layout_marginEnd="@dimen/_12sdp"
            android:drawableStart="@drawable/ic_google"
            android:fontFamily="@font/poppins_bold"
            android:padding="@dimen/_12sdp"
            android:text="@string/googleLogin"
            android:textAllCaps="false"
            android:textColor="@color/gray"
            app:background="@drawable/login_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            android:drawableLeft="@drawable/ic_google" />

        <Button
            android:id="@+id/facebookSignIn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_6sdp"
            android:layout_marginEnd="@dimen/_12sdp"
            android:drawableStart="@drawable/ic_facebook"
            android:fontFamily="@font/poppins_bold"
            android:padding="@dimen/_12sdp"
            android:text="@string/facebookLogin"
            android:textAllCaps="false"
            android:textColor="@color/gray"
            app:background="@drawable/login_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/googleSignIn"
            android:drawableLeft="@drawable/ic_facebook" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:fontFamily="@font/poppins_bold"
            android:gravity="center_horizontal"
            android:text="@string/forgetPassword"
            android:textAlignment="center"
            android:textColor="@color/primaryBlue"
            android:textSize="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/facebookSignIn" />


        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:fontFamily="@font/poppins_light"
            android:text="@string/account"
            android:textColor="@color/gray"
            android:textSize="@dimen/_10sdp"
            app:layout_constraintBottom_toBottomOf="@+id/RegisterLoginTextView"
            app:layout_constraintEnd_toStartOf="@+id/RegisterLoginTextView"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/RegisterLoginTextView" />

        <TextView
            android:id="@+id/RegisterLoginTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_weight="2"
            android:fontFamily="@font/poppins_bold"
            android:paddingLeft="2dp"
            android:text="Register"
            android:textColor="@color/primaryBlue"
            android:textSize="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>